--- a/gb/19/11/18/n11662235.md
+++ b/gb/19/11/18/n11662235.md
@@ -1,57 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/laxxi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/laxxi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/laxxi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/laxxi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/laxxi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/laxxi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/laxxi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>克扣员工工资屡犯不改 墨尔本旅行社被罚40万</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/2019-06-19-15992-20130820000767083758-MONEY-600x399-600x399.jpg" />
 <h6>示意图。（AAP Image/Dan Peled）
 </h6>
 <hr>
-<p>【大纪元2019年11月18日讯】（大纪元记者赵雅勤<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）据《澳洲人报》报导，公平工作调查专员署发现，一家名为Abella Travel Pty Ltd的<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C%E7%A4%BE.md#1">旅行社</a>以担保457类签证为条件，克扣两名韩国籍<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E5%91%98%E5%B7%A5.md#1">员工</a>工资。</p>
-<p>近日，这家在<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>和韩国都有分店的<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C%E7%A4%BE.md#1">旅行社</a>被联邦巡回法庭罚款332,100澳元，同时公司主管Joung Hyung Lee承认在2013至2015年间从一名<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E5%91%98%E5%B7%A5.md#1">员工</a>的工资里扣回了2万多元，被罚款66,420澳元。另一名员工遭遇也类似，公司和Lee提供虚假记录，没有如实支付工资。</p>
+<p>【大纪元2019年11月18日讯】（大纪元记者赵雅勤<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）据《澳洲人报》报导，公平工作调查专员署发现，一家名为Abella Travel Pty Ltd的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C%E7%A4%BE.md#1">旅行社</a>以担保457类签证为条件，克扣两名韩国籍<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%91%98%E5%B7%A5.md#1">员工</a>工资。</p>
+<p>近日，这家在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>和韩国都有分店的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C%E7%A4%BE.md#1">旅行社</a>被联邦巡回法庭罚款332,100澳元，同时公司主管Joung Hyung Lee承认在2013至2015年间从一名<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%91%98%E5%B7%A5.md#1">员工</a>的工资里扣回了2万多元，被罚款66,420澳元。另一名员工遭遇也类似，公司和Lee提供虚假记录，没有如实支付工资。</p>
 <p>两名员工总共被剥夺了37,464.29澳元，这笔钱现已如数退还。</p>
-<p>公司短付工资的行为让受害员工生活窘迫。据悉，该旅行社2014年曾因<ahref="https://github.com/laxxi266/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%B7%A5%E8%B5%84.md#1">克扣工资</a>向专员署公开承诺过会守法。法官称他们是“累犯”，专门剥削弱势群体来谋取利益。</p>
+<p>公司短付工资的行为让受害员工生活窘迫。据悉，该旅行社2014年曾因<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3%E5%B7%A5%E8%B5%84.md#1">克扣工资</a>向专员署公开承诺过会守法。法官称他们是“累犯”，专门剥削弱势群体来谋取利益。</p>
 <p>责任编辑：李欣然</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/19/9/2/n11492606.md#1">协助公司压榨员工 果汁店经理面临巨额罚款</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/19/9/4/n11497366.md#1">维州制定新法 短付工资成刑事犯罪</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/19/9/20/n11533994.md#1">克扣员工薪酬工资单造假 维州连锁咖啡店遭指控</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/19/10/27/n11616372.md#1">克扣亚裔留学生近7万薪资 墨尔本牙科诊所遭重罚</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12086007.md#1">消费者团体吁：至少六个月禁止断电</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/6/n12086255.md#1">墨尔本各市府高管拒绝减薪 欲增收市政费</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/6/n12086560.md#1">墨尔本房价若跌10% 首购族可来这里买房</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/4/30/n12071934.md#1">资助医院研究中共病毒 澳老人将卖房捐善款</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/3/7/n11922895.md#1">中共肺炎：墨市肉厂群聚感染增至49人 上月送羊肉到武汉</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12083867.md#1">耗资巨大无绩效 澳一市府取消中国交往计划</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/9/2/n11492606.md#1">协助公司压榨员工 果汁店经理面临巨额罚款</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/9/4/n11497366.md#1">维州制定新法 短付工资成刑事犯罪</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/9/20/n11533994.md#1">克扣员工薪酬工资单造假 维州连锁咖啡店遭指控</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/27/n11616372.md#1">克扣亚裔留学生近7万薪资 墨尔本牙科诊所遭重罚</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741352.md#1">Woolworths将以2.43亿收购在线平台MyDeal</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741323.md#1">7月起 澳洲小型家庭电费一年或增近200元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741321.md#1">上海封城导致造影剂短缺 澳部分手术被迫推迟</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741175.md#1">澳房价涨速是薪水近7倍 年底或有改善</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741132.md#1">澳航首次推出“先买后付”机票预订服务</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741100.md#1">博士山4条巴士线路将增加班次</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757327.md#1" target="_blank">共产暴政录：长春围城饿毙几十万人真相</a></li><li><a href="https://github.com/laxxi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/19/n11266537.md#1" target="_blank">聋哑人能说话 瘫痪人迈双腿 亲历者忆神迹</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10799353.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12085546.md#1">萧茗采访班农：你见了国内出逃科学家吗</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12083781.md#1">研究病毒获重要发现 美华裔学者突遇害</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12085740.md#1">华裔病毒研究者遭枪杀 更多细节流出</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12085708.md#1">美B-1B轰炸机出动 中共少将为武统台湾降温</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12083304.md#1">台F-16战机与美空军一同编队飞行 向医护致敬</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/4/n12081675.md#1">刘真离世44天 辛龙深夜发文悼亡妻</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/4/n12082975.md#1">“雷神”为巨石强森庆生 石头蛋糕笑翻网友</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12085409.md#1">传遭官方禁止直播卖货 范冰冰公开回应</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/4/n12082574.md#1">IG用英文勉励网友 范冰冰微博异样噤声</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12084156.md#1">詹子晴32岁总资产上千万 靠2招成副业女王</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/5/n12083937.md#1">美国女童写信给在天堂的小狗 意外收到回信</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/4/20/n12046031.md#1">大总统徐世昌测一字 奇人料定战争结局</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/4/20/n12044745.md#1">人居两地 情发一心  宝玉和黛玉的心灵相知</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/5/4/n12081017.md#1">日本便当店行善 儿童购买可等长大后再付钱</a></li>
-<li><a href="https://github.com/laxxi266/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/laxxi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/laxxi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/18/n11662235.htm">克扣员工工资屡犯不改 墨尔本旅行社被罚40万</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/18/n11662235.htm">克扣员工工资屡犯不改 墨尔本旅行社被罚40万</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/laxxi266/djy/blob/master/gb/19/11/18/n11662235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/laxxi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/laxxi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/laxxi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/laxxi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/laxxi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/11/18/n11662235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
